# mcplint

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CLI_CHANGES_VERIFICATION.md  CONTRIBUTING.md  Cargo.toml  LICENSE  M0_IMPLEMENTATION_PLAN.md  M3_FUZZER_IMPLEMENTATION_PLAN.md  M4_CACHING_IMPLEMENTATION_PLAN.md  MCPLint AI Enhancement Strategy - Executive Summary.md  MCPLint_Technical_Plan.md  PERFORMANCE.md  README.md  claude_code_prompt.md  mcplint_advanced_prompts.md  mcplint_ai_detection.md  mcplint_ai_roadmap.md  mcplint_neo4j_integration.md
.github/workflows/: ci.yml
claudedocs/: MCPLint CLI Implementation Plan for Claude Code.md  Modern Rust CLI patterns for building mcplint.md  gap_analysis_2025-12-08.md  research_mcplint_plan_review_2025-12-07.md
docs/: M1_IMPLEMENTATION_PLAN.md  M2_SECURITY_SCANNER_PLAN.md  M5_DESIGN.md  M6_DESIGN_PLAN.md  M7_DESIGN_PLAN.md  M7_IMPLEMENTATION_PLAN.md  MCPLint_Technical_Plan.md  TECHNICAL_DEBT.md  async-optimization-plan.md  error-context-plan.md  fingerprinting.md  interactive-mode.md  memory-optimization-plan.md
docs/adr/: ADR-001-transport-selection.md  ADR-002-cache-backend-strategy.md  ADR-003-module-boundaries.md
docs/pdca/phase2-prep/: plan.md
docs/specs/: EXECUTABLE_SPECS.md  FAILURE_MODES.md  METRICS.md  TEST_STRATEGY.md
examples/ci/: README.md  github-actions-mcp-scan.yml  github-actions-simple.yml
src/: lib.rs  main.rs
src/ai/: config.rs  engine.rs  mod.rs  neo4j_kb.rs  prompt.rs  prompt_templates.rs  rate_limit.rs  response.rs  streaming.rs
src/ai/provider/: anthropic.rs  mock.rs  mod.rs  ollama.rs  openai.rs
src/baseline/: diff.rs  fingerprint.rs  mod.rs  store.rs
src/cache/: backend.rs  entry.rs  filesystem.rs  key.rs  memory.rs  mod.rs  redis.rs  rug_pull.rs  stats.rs
src/cli/: completions.rs  config.rs  help.rs  interactive.rs  mod.rs  server.rs
src/cli/commands/: cache.rs  doctor.rs  explain.rs  fingerprint.rs  fuzz.rs  init.rs  mod.rs  multi_scan.rs  rules.rs  scan.rs  servers.rs  validate.rs  watch.rs
src/client/: mock.rs  mod.rs
src/errors/: mod.rs  suggestions.rs
src/fingerprinting/: comparator.rs  hasher.rs  mod.rs  normalizer.rs  types.rs
src/fuzzer/: config.rs  corpus.rs  coverage.rs  detection.rs  input.rs  limits.rs  mod.rs  session.rs
src/fuzzer/mutation/: dictionary.rs  json.rs  jsonrpc.rs  mcp.rs  mod.rs  strategy.rs
src/protocol/: jsonrpc.rs  mcp.rs  mod.rs  state.rs
src/reporter/: gitlab.rs  html.rs  junit.rs  mod.rs  sarif.rs
src/rules/: mod.rs
src/scanner/: context.rs  engine.rs  finding.rs  helpers.rs  mod.rs  multi_server.rs  results.rs  streaming.rs
src/scanner/checks/: auth.rs  data.rs  dos.rs  injection.rs  mod.rs  protocol.rs  transport.rs
src/scanner/rules/: mod.rs  oauth_abuse.rs  schema_poisoning.rs  tool_injection.rs  tool_shadowing.rs  unicode_hidden.rs
src/transport/: mock.rs  mod.rs  sse.rs  stdio.rs  streamable_http.rs
src/ui/: mod.rs  output.rs  progress.rs  theme.rs
src/validator/: engine.rs  mod.rs  rules.rs
tests/: ai_integration.rs  cache_integration.rs  interactive_tests.rs  server_integration.rs
