[package]
name = "mcplint"
version = "0.4.0"
edition = "2021"
authors = ["Russ Smith <quanticsoul4772@users.noreply.github.com>"]
description = "MCP Server Testing, Fuzzing, and Security Scanning Platform"
license = "MIT"
repository = "https://github.com/quanticsoul4772/mcplint"
homepage = "https://github.com/quanticsoul4772/mcplint"
documentation = "https://docs.rs/mcplint"
readme = "README.md"
keywords = ["mcp", "security", "fuzzing", "testing", "ai"]
categories = ["command-line-utilities", "development-tools::testing"]

[dependencies]
# MCP SDK
rmcp = { version = "0.9", features = ["client", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# CLI
clap = { version = "4", features = ["derive", "env", "color"] }
clap_complete = "4.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"
miette = { version = "7", features = ["fancy"] }
strsim = "0.11"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Parallelism
rayon = "1"
num_cpus = "1.16"

# Terminal output
colored = "2"
indicatif = "0.17"
console = "0.15"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }

# CI detection
is_ci = "1.2"

# Signal handling for Ctrl+C
ctrlc = "3.4"

# HTTP client (for remote MCP servers)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# URL handling
url = "2"

# Regex for pattern matching
regex = "1"

# JSON Schema validation
jsonschema = "0.27"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Random number generation (for fuzzing)
rand = { version = "0.8", features = ["small_rng"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Config file support
toml = "0.8"
directories = "5"

# Home directory detection (for cache path)
dirs = "5"

# Hashing for baseline fingerprints
sha2 = "0.10"

# File watching for watch mode
notify = "6.0"

# Binary serialization support
serde_bytes = "0.11"

# Redis client (optional)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }
base64 = "0.22.1"

# Neo4j graph database driver (optional)
neo4rs = { version = "0.7", optional = true }

[dev-dependencies]
# Testing
proptest = "1"
arbitrary = { version = "1", features = ["derive"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tokio-test = "0.4"

[features]
default = []
fuzz = []
redis = ["dep:redis"]
neo4j = ["dep:neo4rs"]

[lib]
name = "mcplint"
path = "src/lib.rs"

[[bin]]
name = "mcplint"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
